--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     />
   </head>
+  <!-- just a demo -->
   <body>
     <div class="row header">
       <div class="col-lg-4 "></div>
